# xarvina

./: README.md  fields_to_review_today.csv  index.css  index.html  index.tsx  metadata.json  package.json  xarvio_api.py
xarvio-dashboard-main/: README.md  app.py  pyproject.toml  requirements.txt  styles.css  xarvio_data_to_df (1).ipynb
xarvio-dashboard-main/sample_data/: field_status_details.tsv
